--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,3 +4,4 @@
 @import './vendors/bootstrap/scss/bootstrap.scss';
 @import './layouts/main-layout.css';
 @import './components/header.css';
+@import './pages/listings.css';
