--- a/resources/css/layouts/account.css
+++ b/resources/css/layouts/account.css
@@ -1,10 +1,29 @@
-.listings-page {
+.account-layout {
 
 }
 
 .listings-city {
     position: relative;
     background-color: black;
+}
+
+.content {
+    padding: 70px 0;
+}
+
+.col-md-9 {
+    border: 1px solid blue;
+}
+
+.account-menu h2 {
+    font-weight: 700;
+}
+
+
+.account-menu a {
+    display: block;
+    font-size: 1.1rem;
+    text-decoration: none;
 }
 
 .listings-city img {
@@ -23,64 +42,15 @@
     color: #fff;
 }
 
-.listings-filter {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.listings-filter-container {
-    display: flex;
-    background: white;
-    padding: 20px;
-    position: relative;
-    transform: translate(0, -50%);
-    border-radius: 5px;
-}
-
-.filter-option, .filter-button {
-    padding: 0 15px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
-    border: 1px solid rgb(245,246ß, 247);
-    margin-right: .5rem;
-    cursor: pointer;
-    transition: all .2s ease-in-out;
-    font-weight: 600;
-}
-
-.filter-option:hover, .filter-button:hover {
-    background: rgb(245,246, 247);
-}
-
-.filter-button {
-    margin-right: 0;
-    border: 1px solid rgb(219,105,29);
-}
-
-.filter-button:hover {
-    background: rgb(219,105,29);
-    color: white;
-}
-.fa-caret-down {
-    margin-left: 1rem;
-}
-
 .listings-properties-container {
 }
 
 .listings-properties-item {
-    display: block;
     padding: 20px;
-    border-radius: 15px;
+    border-radius: 5px;
     box-shadow: rgba(17,12,46,0.15) 0px 48px 100px 0px;
     margin-bottom: 2rem;
     position: relative;
-    text-decoration: none;
-    color: grey;
 }
 
 .listings-properties img {
