--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,3 @@
-@import './base/reset.css';
-@import './base/utilities.css';
-@import './base/variables.css';
 @import './vendors/bootstrap/scss/bootstrap.scss';
 @import './layouts/main-layout.css';
 @import './components/header.css';
@@ -9,3 +6,14 @@
 @import './pages/show-status.css';
 @import './pages/auth.css';
 @import './pages/single-listing.css';
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.error-sub-text {
+    padding: 10px 0;
+    color: red;
+    font-size: .8rem;
+
+}
